Add route index

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@
 # gem "pg"
 #
 default: &default
-  adapter: localhost
+  adapter: postgresql
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
@@ -21,7 +21,7 @@ default: &default
 
 development:
   <<: *default
-  database: manago
+  database: manago_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
